[gd_scene load_steps=2 format=3 uid="uid://bglgvedavj75s"]

[ext_resource type="Script" uid="uid://bmraa6ioy1mnn" path="res://scripts/components/damaged_component.gd" id="1_0lbf6"]

[node name="DamagedComponent" type="Node" node_paths=PackedStringArray("respawn_timer", "invulnarability_timer")]
script = ExtResource("1_0lbf6")
respawn_timer = NodePath("RespawnTimer")
invulnarability_timer = NodePath("InvularabilityTimer")
invulnarability_time = 4.0

[node name="RespawnTimer" type="Timer" parent="."]

[node name="InvularabilityTimer" type="Timer" parent="."]

[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="InvularabilityTimer" to="." method="_on_invularability_timer_timeout"]
